# coltrans-planning

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: benchmark-daily.yml  build-self-hosted.yml
examples/1cf_pointmass/: 1cf_pointmass.yaml
examples/1cf_pointmass2d/: 1cf_pointmass2d.yaml
examples/1cfs_pointmass/: 1cfs_pointmass.yaml
examples/1cfs_pointmass2d/: 1cf_pointmass2d.yaml
examples/2cfs_payload/: 2cfs_payload.yaml  takeoff.yaml
examples/2cfs_pointmass/: 2cfs_pointmass.yaml
examples/3cfs_payload/: 3cfs_payload.yaml
examples/3cfs_pointmass/: 3cfs_pointmass.yaml
examples/benchmark/: empty_0robots.yaml  empty_1robots.yaml  empty_2robots.yaml  empty_2robots_rig.yaml  empty_2robots_uniform.yaml  empty_3robots.yaml  empty_4robots.yaml  empty_5robots.yaml  empty_5robots_uniform.yaml  empty_6robots.yaml  forest_0robots.yaml  forest_1robots.yaml  forest_2robots.yaml  forest_2robots_exp.yaml  forest_3robots.yaml  forest_3robots_exp.yaml  forest_3robots_uniform.yaml  forest_4robots.yaml  forest_4robots_uniform.yaml  forest_5robots.yaml  forest_6robots.yaml  maze_0robots.yaml  maze_2robots.yaml  maze_3robots.yaml  maze_4robots.yaml  maze_5robots.yaml  maze_6robots.yaml  takeoff_0robots.yaml  takeoff_2robots.yaml  window_0robots.yaml  window_1robots.yaml  window_2robots.yaml  window_2robots_exp.yaml  window_3robots.yaml  window_3robots_exp.yaml  window_3robots_uniform.yaml  window_4robots.yaml  window_4robots_uniform.yaml  window_5robots.yaml  window_6robots.yaml
examples/empty/: 3cfs.yaml  4cfs.yaml  5cfs.yaml  6cfs.yaml  7cfs.yaml  8cfs.yaml
examples/forest/: 1cfs.yaml  3cfs.yaml  4cfs.yaml  5cfs.yaml  6cfs.yaml  7cfs.yaml  8cfs.yaml
examples/maze/: 3cfs.yaml  4cfs.yaml  5cfs.yaml  6cfs.yaml  7cfs.yaml  8cfs.yaml
examples/payload/: output.yaml  payload.yaml
examples/test-fcl/: test-fcl.yaml
examples/visualize/: Triangle_meteres_centered.stl  meshcat.yaml
include/: fclStateValidityChecker.h  fclStateValidityChecker.hpp  goal.h  helper.h  helper.hpp  optimObj.h  optimObj.hpp  robots.h  robots.hpp  sampler.h
scripts/: benchmark.py  compute_errors.py  compute_obs.py  compute_stats.py  compute_stats.yaml  init_cables.py  init_guess.py  init_guess_st_g.py  init_guess_unicycle.py  obstacles_final.yaml  paper_tables.py  plot.py  report_info.py  table_plot.py  test_fcl.py  visualize.py  visualize_payload.py  visualize_unicycles.py
src/: fclStateValidityChecker.cpp  goal.cpp  helper.cpp  main_fcl.cpp  nUavsPayloadPlanner.cpp  optimObj.cpp  payloadPlanner.cpp  robots.cpp  sampler.cpp
tests/: 1cf2d_opt.sh  1cf_pointmass.sh  1cf_pointmass2d.sh  1cfs_pointmass.sh  1cfs_pointmass2d.sh  2cfs_payload.sh  2cfs_pointmass.sh  3cfs_payload.sh  3cfs_pointmass.sh  empty.sh  forest.sh  maze.sh  pipeline.sh  takeoff_2cfs_payload.sh  takeoff_geom.sh  test_fcl.sh
